# gitman

./: .devenv.flake.nix  .env  .gitignore  .tmuxp.yaml  CLAUDE.md  README.md  delete_repos.py  demo_script.py  devenv.nix  devenv.yaml  gitman.toml  gitman_tmuxp.yaml  mkdocs.yml  model.py  new_smee_channel.sh  pyproject.toml  webhook_watcher.py
.claude/: settings.local.json
.claude/skills/gitman/: SKILL.md
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.scratch/: dogfood_mp1.py  dogfood_mp2.sh  probe2.py  probe3.py  probe4.py  probe5_mp2.py  probe_pyjutsu.py
.scratch/projects/01-vcs-concept-brainstorming/: GITMAN_CONCEPT.md  KICKOFF_PROMPT.md
.scratch/projects/02-pyjutsu-pyo3-binding/: KICKOFF_PROMPT.md  PYJUTSU_CONCEPT.md
.scratch/projects/03-gitman-pyjutsu-migration/: DECISION_LOG.md  KICKOFF_IMPLEMENTATION.md  KICKOFF_MP1.md  KICKOFF_MP2.md  KICKOFF_PROMPT.md  MIGRATION_PLAN.md  MIGRATION_PLAN_v2.md  MP1_IMPLEMENTATION_GUIDE.md  MP2_IMPLEMENTATION_GUIDE.md  UPSTREAM_pyjutsu_immutability.md
.scratch/projects/04-gitman-code-review/: CODE_REVIEW.md  REVIEW_REFACTORING_IDEAS.md
.scratch/projects/05-bootstrap-issues/: gitman-pyjutsu-bootstrap-issues.md
.scratch/projects/06-stray-tags-and-divergent-reconcile/: ISSUE_ANALYSIS.md  issue-overview.md
.scratch/projects/07-forge-pr-trunk-reconcile/: BUILD_PLAN.md  ISSUE.md  KICKOFF.md  KICKOFF_v2.md  PLAN.md
.scratch/projects/08-split-lane-capability/: ISSUE.md  KICKOFF.md  PLAN.md
.scratch/projects/09-adopt-colocation-hardening/: KICKOFF.md  PROBE_FINDINGS.md
.scratch/projects/10-resume-existing-lane/: ISSUE.md  KICKOFF.md  PLAN.md
.scratch/projects/11-conflicted-bookmark-command-deadlock/: ISSUE_ANALYSIS.md  REPORT.md
.scratch/projects/12-in-repo-hidden-workspace-dir/: ISSUE.md  ISSUE_ANALYSIS.md
.scratch/projects/13-raw-git-push-trunk-desync/: ISSUE.md  repark_wc.py
.scratch/projects/14-repo-review-and-catch-up/: KICKOFF_PROMPT.md  OVERVIEW.md  PLAN.md
.scratch/projects/15-trunk-force-push-rehash-and-tracked-cache-untrack/: ISSUES.md  PLAN.md
.scratch/projects/16-local-authored-trunk-model/: DECISION.md
.scratch/projects/17-lane-stacking-start-bases-on-trunk/: STACK_ISSUE.md
.scratch/projects/18-bootstrap-remote-first-trunk-push/: ISSUE.md
.scratch/projects/19-trunk-model-deep-dive/: ANALYSIS.md  KICKOFF_PROMPT.md
.scratch/projects/20-trunk-model-tier1/: PLAN.md
.scratch/projects/21-trunk-model-tier2/: KICKOFF_PROMPT.md  PLAN.md
.scratch/projects/22-trunk-model-tier3/: KICKOFF_PROMPT.md  PLAN.md
.scratch/projects/23-trunk-model-tier4-lane-stacking/: ANALYSIS.md  KICKOFF_PHASE1.md  KICKOFF_PHASE2A.md  KICKOFF_PHASE2B.md  KICKOFF_PHASE2_PLANNING.md  KICKOFF_PHASE3A.md  KICKOFF_PHASE3B.md  KICKOFF_PHASE3_PLANNING.md  KICKOFF_PROMPT.md  PLAN.md  PLAN_PHASE2.md  PLAN_PHASE3.md
.scratch/projects/24-deferred-backlog/: BACKLOG.md
.scratch/projects/25-review-survivors/: H1_LANE_LINEARITY.md  H3_RELEASE_TAG_ON_LANE.md  OVERVIEW.md
.scratch/projects/25-workspace-sync-colocated-attribute-error/: ISSUE.md
.scratch/projects/26-worktree-land-checkout-catchup-desync/: ISSUE.md
.scratch/projects/27-implementation-guides/: D5_HUNK_SPLIT_GUIDE.md  H1_LANE_LINEARITY_GUIDE.md  H3_RELEASE_TAG_GUIDE.md  PYJUTSU_14_BINDINGS_GUIDE.md  README.md  RECOLOCATE_GITMAN_GUIDE.md
archive/250609/: .copier-answers.yml  CONTRIBUTING.md  duties.py  pyproject.toml  start_smee.sh
archive/250609/config/: ruff.toml
archive/250609/config/vscode/: launch.json
archive/250609/scripts/: start_smee.sh
archive/250609/src/gitman/: __init__.py  config.py  main.py  mvp_gitman.py  smee_runner.py  sync_repos.py  webhook_sync.py
archive/250609/src/gitman/_internal/: cli.py  logger.py
archive/250609/src/gitman/mvp/: cli.py
archive/250609/src/gitman/mvp/models/: graphql_base.py  models_base.py
archive/250609/src/gitman/mvp/models/graphql/: issue_comments.py  projects.py  repos.py
docs/: GITMAN_CONCEPT.md  JUJUTSU_PRIMER.md  USING_GITMAN.md
docs/.overrides/partials/: comments.html
examples/: README.md  gitman.toml  lane-loop.sh
gitman/: __init__.py  api_server.py  launch_tmuxp.py  smee_runner.py  sync_repos.py
nix/: gitman.nix
scripts/: gen_credits.py  gen_fixtures.py
src/gitman/: __init__.py  __main__.py  api_server.py  cli.py  config.py  core.py  doctor.py  file_store.py  git.py  github_client.py  github_event_handlers.py  github_queries.py  github_records.py  gitshim.py  init.py  invariants.py  jj.py  lanes.py  models.py  reconcile.py  release.py  render.py  session.py  setup_github_app.py  state.py  sync_manager.py  tags.py  templates.py  version.py  webhook_app.py
src/gitman/_internal/: debug.py
src/gitman/advanced/: __init__.py
src/gitman/db/: base.py
src/gitman/inbound/: api_server.py  launch_tmuxp.py  new_smee_channel.py  sync_repos.py
src/gitman/models/: base_models.py  content_models.py  extended_models.py  minimal_models.py  utils.py  webhook_models.py
src/gitman/mvp/: api.py  api_testing.py  base.py  cli.py
src/gitman/outbound/: __init__.py  cli.py  client.py  config.py  manager.py  (+2 more)
tests/: __init__.py  conftest.py  test_adopt_integration.py  test_api.py  test_batch1_review_fixes.py  test_cli.py  test_colocate_init.py  test_colocated_git_sync.py  test_colocated_refs.py  test_conflicted_lane.py  test_h1_lane_linearity.py  test_hunk_split_integration.py  test_lifecycle_integration.py  test_m3_integration.py  test_parse_git.py  test_parse_jj.py  test_phase1_stacking.py  test_phase2a_names.py  test_phase2b_recursion.py  test_phase3_concurrency.py  test_pull_integration.py  test_remote_stray.py  test_remote_trunk_status.py  test_seed_integration.py  test_session_root.py  test_shape_integration.py  test_split_integration.py  test_status_integration.py  test_stray_tags_divergent.py  test_switch_integration.py  test_sync_resilience.py  test_tier1_trunk_model.py  test_tier2_trunk_verbs.py  test_tier3_guardrail.py  test_version_parse.py  test_version_unit.py  test_workspace_inrepo.py
tests/fixtures/: bookmarks.jsonl  changes_lane.jsonl  oplog.jsonl  resolve_list.txt  workspace_list.txt
(+15 files in other folders)
