[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitman"
version = "0.3.0"
description = "Sync GitHub issues and discussions to local JSON files"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Bullish-Design", email = "BullishDesignEngineering@gmail.com" }]
dependencies = [
  "requests>=2.32",
  "rich>=13.7",
]

[project.scripts]
gitman = "gitman.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
