[project]
name = "gitman"
version = "0.3.0"
description = "Agent-first version-control interface: a safe lane workflow over jujutsu + colocated git."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" },
]

# Lean base: pydantic + typer + pyjutsu (the in-process jj-lib engine). git comes from
# devenv (for tags.py, the one retained subprocess); there is no `jj` CLI dependency.
dependencies = [
  "pydantic>=2.12",
  "typer>=0.12",
  "pyjutsu>=0.10",
]

[project.optional-dependencies]
# Optional forge bridge (PR publish/land via GitHub). DEFERRED — the base never imports it.
github = [
  "PyGithub>=2.3",
]

[dependency-groups]
dev = [
  "pytest>=7.0",
  "ruff>=0.5.0",
]

[project.scripts]
gitman = "gitman.cli:main"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitman"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
  "tests",
  "examples",
  "docs",
  "pyproject.toml",
]

# No [tool.uv.sources] for pyjutsu: it resolves from vendomat's prebuilt wheelhouse via
# UV_FIND_LINKS (set by the imported vendomat devenv module), instead of being built from
# the sibling ../Pyjutsu checkout. UV_NO_BUILD_PACKAGE=pyjutsu makes a missing wheel fail
# loudly rather than silently recompiling.

# Seed policy; `gitman init` writes the frozen trunk here (or to gitman.toml). See concept §15.
[tool.gitman]
# trunk is written once by `gitman init`, then frozen (invariant I1).

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# init.py embeds template files (agent skill, config) with intentionally long lines.
"src/gitman/init.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
