[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "gitman"
description = "A Github manager - Provides objects and syncs the github api with your local state, with a goal of allowing you finer control/integration of your discussions, projects, and issues.  "
authors = [{name = "Bullish Design", email = "BullishDesignLLC@gmail.com"}]
license = "ISC"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "datamodel-code-generator[graphql]>=0.30.1",
    "fastapi>=0.115.12",
    "githubkit>=0.12.12",
    "pydantic>=2.11.4",
    "pysmee>=0.1.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "typer>=0.15.3",
    "uvicorn>=0.34.3",
    "watchfiles>=1.0.5",
]

[project.urls]
Homepage = "https://Bullish-Design.github.io/gitman"
Documentation = "https://Bullish-Design.github.io/gitman"
Changelog = "https://Bullish-Design.github.io/gitman/changelog"
Repository = "https://github.com/Bullish-Design/gitman"
Issues = "https://github.com/Bullish-Design/gitman/issues"
Discussions = "https://github.com/Bullish-Design/gitman/discussions"
Gitter = "https://gitter.im/gitman/community"
Funding = "https://github.com/sponsors/Bullish-Design"

[project.scripts]
gitman = "gitman.cli:main"
main = "gitman.main:main"
mvp = "gitman.mvp.base:main"
graphql_main = "gitman.archive.graphql.test:main"
graphql_post = "gitman.archive.graphql.create:main"
reset_db = "gitman._internal.user_scripts.alembic_utils:insert_delete_table_commands"
gql = "gitman.mvp.models.graphql_base:main"
api = "gitman.mvp.api_testing:main"
cli = "gitman.mvp.cli:app"


[tool.pdm.version]
source = "call"
getter = "scripts.get_version:get_version"

[tool.pdm.build]
# Include as much as possible in the source distribution, to help redistributors.
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
# Manual pages can be included in the wheel.
# Depending on the installation tool, they will be accessible to users.
# pipx supports it, uv does not yet, see https://github.com/astral-sh/uv/issues/4731.
data = [
    {path = "share/**/*", relative-to = "."},
]

[dependency-groups]
maintain = [
    "build>=1.2",
    "git-changelog>=2.5",
    "twine>=5.1",
    "yore>=0.3.3",
]
ci = [
    "duty>=1.6",
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "mypy>=1.10",
    "types-markdown>=3.6",
    "types-pyyaml>=6.0",
]
 docs = [
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocs>=1.6",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-llmstxt>=0.1",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=0.25",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2.0; python_version < '3.11'",
]

[tool.uv]
default-groups = ["maintain", "ci", "docs"]
